# SEcube-SDK

./: CMakeLists.txt
SEcube Host Libraries/examples/: FullDilithiumTest.cpp  digest_algorithms.cpp  dilithium_call.cpp  hostSideTest.cpp  masterSeedExapnsion.cpp
SEcube Host Libraries/sources/L0/L0 Base/: L0_base.cpp
SEcube Host Libraries/sources/L1/: L1.cpp  L1.h  L1_enumerations.h  L1_security.cpp
SEcube Host Libraries/sources/L1/Crypto Libraries/: Keccak.c  Keccak.h  sha3.c  sha3.h  shake.c  shake.h
SEcube Host Libraries/sources/L1/Security API/: security_api.h
SEcube USBStick Firmware/Project/Inc/Common/: Keccak.h  se3c1def.h  sha3.h  shake.h
SEcube USBStick Firmware/Project/Inc/Device/: se3_algo_dilithium.h  se3_algo_dilithium_params.h  se3_algo_dilithium_symmetric.h  se3_algo_mldsa.h  se3_algo_mldsa_params.h  se3_algo_mldsa_symmetric.h  se3_algo_sha3.h  se3_algo_shake.h  se3_arith_ntt.h  se3_arith_packing.h  se3_arith_poly.h  se3_arith_polyvec.h  se3_arith_reduce.h  se3_dispatcher_core.h  se3_flash.h  se3_security_core.h
SEcube USBStick Firmware/Project/STM32CubeIDE/USBStick/: USBStick Debug.cfg  USBStick Debug.launch
SEcube USBStick Firmware/Project/Src/Common/: Keccak.c  sha3.c  shake.c
SEcube USBStick Firmware/Project/Src/Device/: se3_algo_dilithium.c  se3_algo_dilithium_params.c  se3_algo_dilithium_symmetric.c  se3_algo_mldsa.c  se3_algo_sha3.c  se3_algo_shake.c  se3_arith_ntt.c  se3_arith_packing.c  se3_arith_poly.c  se3_arith_polyvec.c  se3_security_core.c
